# qcitel

./: CMakeLists.txt  README.md
main/: CMakeLists.txt  main.c
main/app/: modem.c  modem.h  modem_cmd.h  modem_datatypes.h  modem_http.c  modem_http.h  modem_mqtt.c  modem_mqtt.h
main/examples/: modem_http_example.c  modem_http_example.h  modem_mqtt_example.c  modem_mqtt_example.h
main/hal/: hal_config.h  hal_events.h  hal_gpio.c  hal_gpio.h  hal_uart_bus.c  hal_uart_bus.h
main/oal/: oal_log.c  oal_log.h  oal_queue.c  oal_queue.h  oal_thread.c  oal_thread.h  oal_timer.c  oal_timer.h
